--- a/time.html
+++ b/time.html
@@ -55,7 +55,8 @@
       const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
       const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
       document.getElementById("time").innerHTML = `${newDate.toLocaleTimeString()} UTC${offset >= 0 ? "+" : ""}${offset}`
-      document.getElementById("date").innerHTML = `${days[newDate.getUTCDay()]}, ${months[newDate.getUTCMonth()]} ${newDate.getUTCDate()}, ${newDate.getUTCFullYear()}`;
+      document.getElementById("date").innerHTML = `${days[newDate.getDay()]}, ${months[newDate.getMonth()]} ${newDate.getDate()}, ${newDate.getFullYear()}`;
+      console.log(newDate.getUTCDay())
     };
 
     displayTime(getUTCOffset());
